add scroll to top function

--- a/Exercise.html
+++ b/Exercise.html
@@ -14,6 +14,11 @@
     <div id="header"></div>
 
     <div class="container-body">
+        <!-- scroll to top -->
+        <button class="go_top_btn">
+            <img src="./assets/images/Home1/To-Top.png" alt="img up" id="to_top">
+        </button>
+        
         <div class="bg_overlay"></div>
         <div class="address">
             <a href="./Home.html">TRANG CHỦ</a> > <a href="./Exercise.html"><b>DỊCH VỤ TẬP THỂ DỤC</b></a>
