--- a/Home.html
+++ b/Home.html
@@ -14,6 +14,11 @@
     <div id="header"></div>
 
     <div class="container-body">
+        <!-- scroll to top -->
+        <button class="go_top_btn">
+            <img src="./assets/images/Home1/To-Top.png" alt="img up" id="to_top">
+        </button>
+
         <!-- popup -->
         <div id="popup" class="popup">
             <div id="popupContent">
@@ -345,10 +350,10 @@
                                     </div>
                                     <div class="product-information">
                                         <div class="price-product">
-                                            <span>17,000,000</span>
+                                            <span>13,000,000</span>
                                             <span>đ</span>
                                         </div>
-                                        <div class="name-product">Alaska Malamute trắng xám</div>
+                                        <div class="name-product">Corgy thuần chủng vàng trắng</div>
                                     </div>
                                 </a>
                             </div>
@@ -369,7 +374,7 @@
                                             <span>17,000,000</span>
                                             <span>đ</span>
                                         </div>
-                                        <div class="name-product">Alaska Malamute trắng xám</div>
+                                        <div class="name-product">Anh lông ngắn tai cụp bicolor</div>
                                     </div>
                                 </a>
                             </div>
@@ -386,14 +391,14 @@
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
                                         </div>
-                                        <img src="./assets/images/Pets/alaska.png" alt="image-product" class="image-product">
+                                        <img src="./assets/images/products/food1.png" alt="image-product" class="image-product">
                                     </div>
                                     <div class="product-information">
                                         <div class="price-product">
-                                            <span>17,000,000</span>
+                                            <span>2,000,000</span>
                                             <span>đ</span>
                                         </div>
-                                        <div class="name-product">Alaska Malamute trắng xám</div>
+                                        <div class="name-product">Thức ăn tự nhiên cho mèo</div>
                                     </div>
                                 </a>
                             </div>
@@ -411,10 +416,10 @@
                                     </div>
                                     <div class="product-information">
                                         <div class="price-product">
-                                            <span>15,000,000</span>
+                                            <span>8,000,000</span>
                                             <span>đ</span>
                                         </div>
-                                        <div class="name-product">Anh lông ngắn tai cụp xám vàng</div>
+                                        <div class="name-product">Akita thuần chủng vàng trắng</div>
                                     </div>
                                 </a>
                             </div>
@@ -428,14 +433,14 @@
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
                                         </div>
-                                        <img src="./assets/images/Pets/alaska.png" alt="image-product" class="image-product">
+                                        <img src="./assets/images/products/kiềm_cắt_móng-2.png" alt="image-product" class="image-product">
                                     </div>
                                     <div class="product-information">
                                         <div class="price-product">
-                                            <span>17,000,000</span>
+                                            <span>100,000</span>
                                             <span>đ</span>
                                         </div>
-                                        <div class="name-product">Alaska Malamute trắng xám</div>
+                                        <div class="name-product">Kiềm cắt móng đa năng cho mèo</div>
                                     </div>
                                 </a>
                             </div>
@@ -449,14 +454,14 @@
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
                                         </div>
-                                        <img src="./assets/images/Pets/alaska.png" alt="image-product" class="image-product">
+                                        <img src="./assets/images/products/lược_chải_lông_-2.png" alt="image-product" class="image-product">
                                     </div>
                                     <div class="product-information">
                                         <div class="price-product">
-                                            <span>17,000,000</span>
+                                            <span>150,000</span>
                                             <span>đ</span>
                                         </div>
-                                        <div class="name-product">Alaska Malamute trắng xám</div>
+                                        <div class="name-product">Lược chải lông cute cho mèo</div>
                                     </div>
                                 </a>
                             </div>
@@ -473,14 +478,14 @@
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
                                         </div>
-                                        <img src="./assets/images/Pets/alaska.png" alt="image-product" class="image-product">
+                                        <img src="./assets/images/products/food3.png" alt="image-product" class="image-product">
                                     </div>
                                     <div class="product-information">
                                         <div class="price-product">
-                                            <span>17,000,000</span>
+                                            <span>1,000,000</span>
                                             <span>đ</span>
                                         </div>
-                                        <div class="name-product">Alaska Malamute trắng xám</div>
+                                        <div class="name-product">Thức ăn dinh dưỡng cho chó</div>
                                     </div>
                                 </a>
                             </div>
@@ -498,10 +503,10 @@
                                     </div>
                                     <div class="product-information">
                                         <div class="price-product">
-                                            <span>15,000,000</span>
+                                            <span>11,000,000</span>
                                             <span>đ</span>
                                         </div>
-                                        <div class="name-product">Anh lông ngắn tai cụp xám vàng</div>
+                                        <div class="name-product">Corgy thuần chủng nâu vàng trắng</div>
                                     </div>
                                 </a>
                             </div>
@@ -515,14 +520,14 @@
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
                                         </div>
-                                        <img src="./assets/images/Pets/alaska.png" alt="image-product" class="image-product">
+                                        <img src="./assets/images/Pets/persian-1.png" alt="image-product" class="image-product">
                                     </div>
                                     <div class="product-information">
                                         <div class="price-product">
-                                            <span>17,000,000</span>
+                                            <span>19,000,000</span>
                                             <span>đ</span>
                                         </div>
-                                        <div class="name-product">Alaska Malamute trắng xám</div>
+                                        <div class="name-product">Ba Tư thuần chủng nâu nhạt</div>
                                     </div>
                                 </a>
                             </div>
@@ -588,13 +593,13 @@
             <div class="blog_list">
                 <div class="blog_content">
                     <div class="img_section">
-                        <div class="img_blog_wrapper"><img src="../assets/images/Home/blog_img1.png" alt="blog_img1" class="blog_img"></div>
+                        <div class="img_blog_wrapper"><img src="../assets/images/Home1/blog_img1.png" alt="blog_img1" class="blog_img"></div>
                         <div class="date">01.11.2023</div>
                     </div>
                     <span class="blog_hover_effect"></span>
                     <h3>Hướng dẫn cho mèo nhà đi vệ sinh cát</h3>
                     <p>Nếu bạn ghét việc phải tốn nhiều thời gian làm sạch khay cát vệ sinh của mèo mỗi ngày, bạn có thể dạy mèo...</p>
-                    <div class="more">Đọc thêm</div>
+                    <a href="./blog-details-2.html"><div class="more">Đọc thêm</div></a>
                 </div>
                 <div class="blog_content">
                     <div class="img_section">
@@ -604,11 +609,11 @@
                     <span class="blog_hover_effect"></span>
                     <h3>Nhu cầu dinh dưỡng của chó - mèo theo khoa học</h3>
                     <p>Cũng như những động vật khác, chó và mèo cần có thức ăn để sống và duy trì sức khỏe. Những chất dinh dưỡng...</p>
-                    <div class="more">Đọc thêm</div>
+                    <a href="./blog-details.html"><div class="more">Đọc thêm</div></a>
                 </div>
                 <div class="blog_content">
                     <div class="img_section">
-                        <div class="img_blog_wrapper"><img src="../assets/images/Home/blog_img3.png" alt="blog_img1" class="blog_img"></div>
+                        <div class="img_blog_wrapper"><img src="../assets/images/Home1/blog_img3.png" alt="blog_img1" class="blog_img"></div>
                         <div class="date">01.11.2023</div>
                     </div>
                     <span class="blog_hover_effect"></span>
