--- a/Grooming.html
+++ b/Grooming.html
@@ -15,6 +15,11 @@
     <div id="header"></div>
 
     <div class="container-body">
+        <!-- scroll to top -->
+        <button class="go_top_btn">
+            <img src="./assets/images/Home1/To-Top.png" alt="img up" id="to_top">
+        </button>
+        
         <div class="bg_overlay"></div>
         <div class="address">
             <a href="./Home.html">TRANG CHỦ</a> > <a href="./Grooming.html"><b>DỊCH VỤ TẮM GỘI - CẮT TỈA LÔNG</b></a>
