--- a/blog-health.html
+++ b/blog-health.html
@@ -17,6 +17,10 @@
     <div id="header"></div>
     <!-- Giới thiệu -->
     <div class="container">
+        <!-- scroll to top -->
+        <button class="go_top_btn">
+            <img src="./assets/images/Home1/To-Top.png" alt="img up" id="to_top">
+        </button>
         <div class="bg_overlay"></div>
         <div class="page-ruler">
             <p>TRANG CHỦ > <b>BÀI VIẾT</b></p>
