--- a/confirm.html
+++ b/confirm.html
@@ -12,7 +12,10 @@
 <body>
    <!-- Header-->
    <div id="header"></div>
-
+    <!-- scroll to top -->
+    <button class="go_top_btn">
+        <img src="./assets/images/Home1/To-Top.png" alt="img up" id="to_top">
+    </button>
     <!-- Address -->
     <section class="address">
         <a href="" class="product-link current-link">Đặt hàng thành công</a>
