--- a/footer.html
+++ b/footer.html
@@ -22,7 +22,7 @@
             <div class="footer-content">
                 <div class="footer-content-column" id="first-footer-content-column">
                     <div class="footer-logo">
-                        <a class="footer-logo-link" href="#">
+                        <a class="footer-logo-link" href="./Home.html">
                             <svg class="logo-draw" xmlns="http://www.w3.org/2000/svg"
                                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 66.2 59.4"
                                 style="enable-background:new 0 0 66.2 59.4;" xml:space="preserve">
