--- a/header.html
+++ b/header.html
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <img class="logo" src="./assets/images/logo/black_logo.png" alt="logo" width="100" height="100">
+        <a href="./Home.html"><img class="logo" src="./assets/images/logo/black_logo.png" alt="logo" width="100" height="100"></a>
         <div class="group">
             <ul class="navigation">
                 <li><a href="./Home.html" class="menu-item" id="nav_home">Trang Chủ</a></li>
