fix bugs blog pages

--- a/blog-details-2.html
+++ b/blog-details-2.html
@@ -21,7 +21,7 @@
     </button>
 
     <div class="page-ruler">
-        TRANG CHỦ > BÀI VIẾT > <b>BV1011</b>
+        <a href="./Home.html">TRANG CHỦ</a> > <a href="./blog-cat.html"> BÀI VIẾT</a>  > <b>BV1012</b>
     </div>
     <div class="blog-details-container">
         <div class="blog-details-create">
