--- a/blog-details.html
+++ b/blog-details.html
@@ -21,7 +21,7 @@
     </button>
 
     <div class="page-ruler">
-        TRANG CHỦ > BÀI VIẾT > <b>BV1001</b>
+        <a href="./Home.html">TRANG CHỦ</a> > <a href="./blog-health.html"> BÀI VIẾT</a>  > <b>BV1001</b>
     </div>
     <div class="blog-details-container">
         <div class="blog-details-create">
