--- a/blog-health.html
+++ b/blog-health.html
@@ -23,7 +23,7 @@
         </button>
         <div class="bg_overlay"></div>
         <div class="page-ruler">
-            <p>TRANG CHỦ > <b>BÀI VIẾT</b></p>
+            <a href="./Home.html">TRANG CHỦ</a> > <b> BÀI VIẾT</b></a>
         </div>
         <div class="intro">
             <div class="left-intro">
@@ -208,7 +208,7 @@
         </div>
         <!-- CÁC ƯU ĐÃI -->
         <div class="deals">
-            <div class="title" style="margin-top: 2%;">
+            <div class="title">
                 <div class="hr-lines">
                     <h2>CÁC ƯU ĐÃI</h2>
                 </div>
