--- a/blog-cat.html
+++ b/blog-cat.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
-    <link rel="stylesheet" href="./css/blog.css">
+    <link rel="stylesheet" href="./css/blog-cat.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
@@ -25,7 +25,7 @@
         
         <div class="bg_overlay"></div>
         <div class="page-ruler">
-            <p>TRANG CHỦ > <b>BÀI VIẾT</b></p>
+            <a href="./Home.html">TRANG CHỦ</a> > <b> BÀI VIẾT</b></a>
         </div>
         <div class="intro">
             <div class="left-intro">
@@ -40,6 +40,7 @@
 
             </div>
         </div>
+
         <!-- CÁC BÀI VIẾT -->
         <div class="news">
             <div class="new">
@@ -210,7 +211,7 @@
         </div>
         <!-- CÁC ƯU ĐÃI -->
         <div class="deals">
-            <div class="title" style="margin-top: 2%;">
+            <div class="title">
                 <div class="hr-lines">
                     <h2>CÁC ƯU ĐÃI</h2>
                 </div>
@@ -303,8 +304,8 @@
 
     </div>
     <div id="footer" style=" position: absolute; width: 100%; top: 520vh;"></div>
+    <!-- <script src="./js/blog.js"></script> -->
     <script src="./js/blog.js"></script>
-
 </body>
 
 
