--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/blog.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <script src="./js/link_header_footer.js"></script>
 
@@ -24,7 +25,7 @@
         
         <div class="bg_overlay"></div>
         <div class="page-ruler">
-            <p>TRANG CHỦ > <b>BÀI VIẾT</b></p>
+            <a href="./Home.html">TRANG CHỦ</a> > <b> BÀI VIẾT</b></a>
         </div>
         <div class="intro">
             <div class="left-intro">
@@ -219,7 +220,7 @@
     </div>
     <!-- CÁC ƯU ĐÃI -->
     <div class="deals">
-        <div class="title" style="margin-top: 2%;">
+        <div class="title">
             <div class="hr-lines">
                 <h2>CÁC ƯU ĐÃI</h2>
             </div>
