new deals banner for contact page

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         </button>
         <div class="bg_overlay"></div>
         <div class="page-ruler">
-            <p>TRANG CHỦ > BÀI VIẾT</p>
+            <a href="./Home.html">TRANG CHỦ</a> > <b> LIÊN HỆ</b></a>
         </div>
         <div class="main-container">
             <div class="contact">
@@ -77,7 +77,7 @@
                         <div class="contact-form">
                             <span class="circle one"></span>
                             <span class="circle two"></span>
-                            <form action="index.html" autocomplete="off">
+                            <form>
                                 <h3 class="title" style="font-size: 2rem;">Liên hệ</h3>
                                 <div class="input-container">
                                     <input type="text" name="name" class="input" />
@@ -107,19 +107,19 @@
             </div>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19395.309366412475!2d106.65815305880979!3d10.738830939723428!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752e450c6358b7%3A0x8293774999e765ab!2zMTAwIMSQLiBU4bqhIFF1YW5nIELhu611LCBQaMaw4budbmcgNSwgUXXhuq1uIDgsIFRow6BuaCBwaOG7kSBI4buTIENow60gTWluaCwgVmlldG5hbQ!5e1!3m2!1sen!2s!4v1698937011088!5m2!1sen!2s"
-                width="60%" height="450" frameborder="0" style="border-radius:20px; margin: 5% 20%;" allowfullscreen=""
+                width="70%" height="450" frameborder="0" style="border-radius:20px; margin: 5% 15%;" allowfullscreen=""
                 aria-hidden="false" tabindex="0"></iframe>
             <div class="contact-deals">
                 <h2 class="deal-content">Đồ chơi, Thức ăn </h2>
                 <h2 class="deal-sub-content">và Phụ kiện cho Thú cưng</h2>
-                <img src="./assets/images/contact/Pty-Dog-Food-2.webp" alt="" width="320" height="350" class="pet-food">
+                <img src="./assets/images/contact/Pty-Dog-Food-2.webp" alt="" width="280" height="350" class="pet-food">
                 <img src="./assets/images/contact/Pty-Dog-Food-1.webp" alt="" width="120" height="100"
                     class="pet-sub-food">
                 <h2 class="deal-content-2">Ưu đãi cuối năm</h2>
                 <h3 class="deal-sub-content-2">Nhập ngay mã:</h3>
                 <h3 class="deal-code">ENDSALE</h3>
                 <button>Mua ngay</button>
-                <img src="./assets/images/contact/deals-image.png" alt="" width="300" height="300" class="ad-deal">
+                <img src="./assets/images/contact/deals-image.png" alt="" width="250" height="250" class="ad-deal">
             </div>
             <!-- partner -->
             <div class="partner">
