--- a/payment.html
+++ b/payment.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="./js/link_header_footer.js"></script>
-    <title>Cart</title>
+    <title>Petty Shop</title>
 </head>
 
 <body>
