update product home page

--- a/Home.html
+++ b/Home.html
@@ -330,14 +330,14 @@
                                                 <i class="fas fa-star"></i>
                                                 <i class="fas fa-star"></i>
                                             </div>
-                                            <img src="./assets/images/Pets/scottish-fold-0.png" alt="image-product" class="image-product" style="width: 150px; height: 130px;">
+                                            <img src="./assets/images/products/giường-cào.png" alt="image-product" class="image-product">
                                         </div>
                                         <div class="product-information">
                                             <div class="price-product">
-                                                <span>15,000,000</span>
+                                                <span>280,000</span>
                                                 <span>đ</span>
                                             </div>
-                                            <div class="name-product">Anh lông ngắn tai cụp xám vàng</div>
+                                            <div class="name-product">Giường cào mèo bằng gỗ</div>
                                         </div>
                                     </a>
                                 </div>
@@ -372,14 +372,14 @@
                                                 <i class="fas fa-star"></i>
                                                 <i class="fas fa-star"></i>
                                             </div>
-                                            <img src="./assets/images/Pets/munchkin-0.png" alt="image-product" class="image-product">
+                                            <img src="./assets/images/products/đồ-mèo-2.png" alt="image-product" class="image-product">
                                         </div>
                                         <div class="product-information">
                                             <div class="price-product">
-                                                <span>17,000,000</span>
+                                                <span>75,000</span>
                                                 <span>đ</span>
                                             </div>
-                                            <div class="name-product">Anh lông ngắn tai cụp bicolor</div>
+                                            <div class="name-product">Set đồ dễ thương cho chó mèo</div>
                                         </div>
                                     </a>
                                 </div>
