--- a/footer.html
+++ b/footer.html
@@ -54,9 +54,9 @@
                     <div class="footer-menu">
                         <h2 class="footer-menu-name" id="hr-lines"> Cửa hàng</h2>
                         <ul class="footer-menu-sub-list">
-                            <li>Cún cưng</li>
-                            <li>Mèo cưng </li>
-                            <li>Sản phẩm cho thú cưng </li>
+                            <li><a href="./pet-category.html">Cún cưng</a></li>
+                            <li><a href="./pet-category.html">Mèo cưng</a> </li>
+                            <li><a href="./shop-category.html">Sản phẩm cho thú cưng</a> </li>
                         </ul>
                     </div>
                 </div>
@@ -64,10 +64,10 @@
                     <div class="footer-menu">
                         <h2 class="footer-menu-name" id="hr-lines">Dịch vụ</h2>
                         <ul class="footer-menu-sub-list">
-                            <li>Thú y</li>
-                            <li>Khách sạn </li>
-                            <li>Tập thể dục </li>
-                            <li>Tắm gội - cắt tỉa lông </li>
+                            <li><a href="./Vet.html">Thú y</a></li>
+                            <li><a href="./Hotel.html">Khách sạn</a> </li>
+                            <li><a href="./Exercise.html">Tập thể dục</a> </li>
+                            <li><a href="./Grooming.html">Tắm gội - cắt tỉa lông</a> </li>
                         </ul>
                     </div>
                 </div>
@@ -77,16 +77,22 @@
                         <ul class="footer-menu-sub-list">
                             <li class="location"><span>100 Tạ Quang Bửu, <br>Phường 5, Quận 8, TP. HCM</span></li>
                             <li>
-                                <i class="fa-brands fa-facebook"></i>
-                                <span class="icon-text">Petty shop</span>
+                                <a href="https://www.facebook.com/UIT.Fanpage">
+                                    <i class="fa-brands fa-facebook"></i>
+                                    <span class="icon-text">Petty shop</span>
+                                </a>
                             </li>
                             <li>
-                                <i class="fa-solid fa-phone"></i>
-                                <span class="icon-text">0985261822</span>
+                                <a href="tel:0985261822">
+                                    <i class="fa-solid fa-phone"></i>
+                                    <span class="icon-text">0985261822</span>
+                                </a>
                             </li>
                             <li>
-                                <i class="fa-solid fa-envelope"></i>
-                                <span class="icon-text">pettycare@gmail.com</span>
+                                <a href="mailto:pettycare@gmail.com">
+                                    <i class="fa-solid fa-envelope"></i>
+                                    <span class="icon-text">pettycare@gmail.com</span>
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -137,7 +143,7 @@
             <div class="footer-copyright">
                 <div class="footer-copyright-wrapper">
                     <p class="footer-copyright-text">
-                        <a class="footer-copyright-link" href="#" target="_self"> ©2020 | All rights
+                        <a class="footer-copyright-link" href="#" target="_self"> ©2023 | All rights
                             reserved. </a>
                     </p>
                 </div>
