add link location for pets and shop

--- a/shop-category.html
+++ b/shop-category.html
@@ -26,7 +26,7 @@
         </button>
         <!-- Address -->
         <section class="address">
-            <a href="" class="address-link">Trang chủ</a>
+            <a href="./Home.html" class="address-link">Trang chủ</a>
             <span class="icon_more_than">></span>
             <a href="./shop-category.html" class="address-link current-link">Cửa hàng</a>
         </section>
