update toggle button in grooming page

--- a/Grooming.html
+++ b/Grooming.html
@@ -85,7 +85,7 @@
                     <h1>MENU</h1>
                     <div class="menu_option">
                         <div id="selected_option"></div>
-                        <button class="toggle_btn" onclick="leftClick()">Chó</button>
+                        <button class="toggle_btn" onclick="leftClick()" style="color: white;">Chó</button>
                         <button class="toggle_btn" onclick="rightClick()">Mèo</button>
                     </div>
                     <a href="./Booking.html">
