lấy thông tin địa chỉ giao hàng, hiển thị ở trang thanh toán

--- a/payment.html
+++ b/payment.html
@@ -368,7 +368,7 @@
             <div class="order-price">
                 <div class="delivery-address">
                     <p>Giao tới</p>
-                    <p class="change-delivery">Thay đổi</p>
+                    <p class="change-delivery transpost">Thay đổi</p>
                     <div class="user">
                         <p class="user-name">Nguyễn Đặng Bảo Ngọc</p>
                         <p>|</p>
@@ -402,7 +402,7 @@
                 <div class="total-price-order">
                     <div class="order-title">
                         <p class="order-title-name">Đơn hàng</p>
-                        <p class="change-delivery">Thay đổi</p>
+                        <p class="change-delivery cart">Thay đổi</p>
                         <p>
                             <span class="quantity">4 sản phẩm.</span>
                             <span>Xem thông tin</span>
