--- a/transpost.html
+++ b/transpost.html
@@ -64,13 +64,13 @@
                     <tr>
                         <td class="transpost-name">Họ tên</td>
                         <td class="transpost-text">
-                            <input type="text" placeholder="Nhập họ tên">
+                            <input type="text" placeholder="Nhập họ tên" class="name">
                         </td>
                     </tr>
                     <tr>
                         <td class="transpost-name">Điện thoại di động</td>
                         <td class="transpost-text">
-                            <input type="text" placeholder="Nhập số điện thoại">
+                            <input type="text" placeholder="Nhập số điện thoại" class="phone">
                         </td>
                     </tr>
                     <tr>
@@ -112,7 +112,7 @@
                     <tr>
                         <td class="transpost-name">Địa chỉ</td>
                         <td class="transpost-text">
-                            <textarea cols="auto" rows="5" placeholder="Ví dụ: 52, đường Trần Hưng Đạo"></textarea>
+                            <textarea cols="auto" rows="5" placeholder="Ví dụ: 52, đường Trần Hưng Đạo" class="direction"></textarea>
                         </td>
                     </tr>
                     <tr>
